--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
+    "@moralisweb3/common-evm-utils": "^2.21.0",
+    "@moralisweb3/next": "^2.21.0",
+    "@web3modal/ethereum": "^2.4.1",
+    "@web3modal/react": "^2.4.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "ethers": "^6.4.0",
+    "fs": "^0.0.1-security",
+    "moralis": "^2.21.0",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "tailwindcss": "3.3.2",
+    "viem": "^0.3.31",
+    "wagmi": "^1.0.5"
   }
 }
