--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "@moralisweb3/common-evm-utils": "^2.21.0",
-    "@moralisweb3/next": "^2.21.0",
+    "@moralisweb3/next": "^2.20.0",
     "@web3modal/ethereum": "^2.4.1",
     "@web3modal/react": "^2.4.1",
     "autoprefixer": "10.4.14",
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.3",
     "ethers": "^6.4.0",
     "fs": "^0.0.1-security",
+    "graphql": "^16.6.0",
     "moralis": "^2.21.0",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
@@ -30,5 +31,8 @@
     "tailwindcss": "3.3.2",
     "viem": "^0.3.31",
     "wagmi": "^1.0.5"
+  },
+  "devDependencies": {
+    "typescript": "5.0.4"
   }
 }
